# snsip-agent

./: .gitignore  Anchor.toml  Cargo.toml  README.md  SNSIP-AGENT.md  STATUS.md  package.json  pnpm-lock.yaml  tsconfig.anchor.json  tsconfig.base.json  wrangler.toml
.github/workflows/: anchor.yml  deploy.yml
apps/web/: package.json
apps/web-pages/: HOW-TO-INSTALL.md  next.config.snippet.ts
apps/web-pages/src/app/: globals.css.append  layout.tsx  page.tsx
apps/web-pages/src/components/: agent-gallery.tsx  agent-profile-gate.tsx  agent-profile.tsx  create-agent-wizard.tsx  handshake-theatre.tsx  latency-theatre.tsx  record-card.tsx  talk-to-agent.tsx  tx-status.tsx  verify-playground.tsx  wallet-button.tsx  wallet-provider.tsx
apps/web-pages/src/lib/: format.ts
apps/web/public/: deck.html
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: agent-activity.tsx  agent-gallery.tsx  agent-profile.tsx  airdrop-demo.tsx  handshake-theatre.tsx  latency-theatre.tsx  login-with-sol.tsx  (+13 more)
pitch/: deck-content.md  deck-outline.md  deck.html  demo-script.md  onchain-proof.md  portal-walkthrough.md  promo-script.md  recording-flow.md  screenshot-checklist.md  submission-checklist.md  submission-text.md  video-script.md  youtube-meta.md
plans/sns-identity-hackathon/: PLAN.md
plans/sns-identity-hackathon/reports/: 260506-ens-v2-gap-analysis.md  260506-sns-identity-hackathon-research.md
programs/: README.md
programs/agent-verifier/: Cargo.toml
programs/agent-verifier/src/: lib.rs
programs/identity-registry/: Cargo.toml
programs/identity-registry/src/: lib.rs
programs/reputation-registry/: Cargo.toml
programs/reputation-registry/src/: lib.rs
programs/validation-registry/: Cargo.toml
programs/validation-registry/src/: lib.rs
scripts/: _verify_memos.cjs  register-devnet-domain.cts  sample-onchain-interactions.cts  seed-agent-records.cts  seed-many.cts  smoke-test.mts  update-endpoints.cts
tests/anchor/: _helpers.ts  agent-verifier.test.ts  identity-registry.test.ts  reputation-registry.test.ts  validation-registry.test.ts
(+15 files in other folders)
