[workspace]
resolver = "2"
members = [
    "programs/identity-registry",
    "programs/reputation-registry",
    "programs/validation-registry",
    "programs/agent-verifier",
]

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
