[package]
name = "reputation-registry"
version = "0.1.0"
description = "SNSIP-Agent Reputation Registry — ERC-8004 port; designed to be delegated to MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "reputation_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

# Day 3: add MagicBlock ER SDK
# ephemeral-rollups-sdk = "x.y.z"
