[package]
name = "validation-registry"
version = "0.1.0"
description = "SNSIP-Agent Validation Registry — ERC-8004 port for third-party agent validations"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "validation_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
